--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,7 +1,7 @@
 .contactSection {
   min-height: 70vh;
   background: linear-gradient(to bottom, #111827, #1f2937);
-  padding: 5rem 1.5rem;
+  padding: 5rem 1.5rem 3rem 1.5rem;
   display: flex;
   align-items: center;
 }
@@ -105,8 +105,9 @@
 }
 
 .submitButton:disabled {
-  opacity: 0.6;
+  opacity: 1;
   cursor: not-allowed;
+  color: white;
 }
 
 @keyframes gradientShift {
@@ -163,6 +164,6 @@
   }
 
   .contactSection {
-    padding: 5rem 4rem;
+    padding: 5rem 4rem 3rem 4rem;
   }
 }
