--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,7 +1,7 @@
 .aboutSection {
   min-height: 50vh;
   background: #f9fafb;
-  padding: 5rem 1.5rem;
+  padding: 0 1.5rem 5rem 1.5rem;
 }
 
 .container {
@@ -116,7 +116,7 @@
   }
 
   .aboutSection {
-    padding: 5rem 4rem;
+    padding: 0 4rem 5rem 4rem;
   }
 }
 
