--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -1,7 +1,7 @@
 .experienceSection {
   min-height: 100vh;
   background: white;
-  padding: 5rem 1.5rem;
+  padding: 0 1.5rem 0rem 1.5rem;
 }
 
 .container {
@@ -34,6 +34,6 @@
     font-size: 3.75rem;
   }
   .experienceSection {
-    padding: 5rem 4rem;
+    padding: 0 4rem 0rem 4rem;
   }
 }
